# simple-power-control

./: CMakeLists.txt  README.md  spower-control.cpp  xyz.openbmc_project.Chassis.Control.Power@.service
